Fixed errors in labels and horizontal scrollbars

--- a/css/checkout.css
+++ b/css/checkout.css
@@ -1,4 +1,7 @@
 /*Body Styling*/
+body {
+  overflow-x: hidden;
+}
 
 h1 {
   color: black;
@@ -6,7 +9,6 @@ h1 {
 
 main h1 {
   display: inline-block;
-  margin-left: 1em;
 }
 
 button {
@@ -92,10 +94,6 @@ main h3 {
   margin: auto;
 }
 
-.cost {
-  margin-right: 2em;
-}
-
 .jacket,
 .cost {
   display: inline-block;
@@ -113,7 +111,16 @@ main h3 {
 .sum-left {
   display: grid;
   justify-content: right;
-  margin-right: 1em;
+}
+
+.form-item1,
+.form-item2,
+.form-item3,
+.form-item4,
+.form-item5 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 /*Personal details styling*/
@@ -140,35 +147,17 @@ input[type=checkbox] {
   background-color: rgb(10, 54, 65, 10%);
   display: flex;
   flex-direction: column;
-  gap: 2%;
+  justify-content: space-evenly;
 }
 
 .bottom label {
-  width: 4em;
-  text-align: center;
-  margin-right: 8em;
-}
-
-.bottom p {
-  display: inline-block;
-  width: 6em; 
+  width: 6em;
 }
 
 .bottom {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 5%;
-}
-
-.form-item1,
-.form-item2,
-.form-item3,
-.form-item4,
-.form-item5 {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin: auto;
 }
 
 /* Media screens for desktop */
@@ -179,6 +168,12 @@ input[type=checkbox] {
 
   .hide-desktop {
     display: none;
+  }
+
+  .shipping .fa-solid,
+  .forms2 .fa-brands {
+    width: 5em;
+    text-align: center;
   }
 }
 
@@ -195,7 +190,6 @@ input[type=checkbox] {
   }
 
   .jacket {
-    width: 6em;
     margin: 0.5em auto;
   }
 
@@ -235,18 +229,6 @@ input[type=checkbox] {
 
   .bottom {
     display: block;
-  }
-
-  .form-item1,
-  .form-item2,
-  .form-item3,
-  .form-item4,
-  .form-item5 {
-    display: block;
-  }
-
-  #delivery {
-    margin-left: -1px;
   }
 }
 
