--- a/css/contact.css
+++ b/css/contact.css
@@ -28,10 +28,6 @@ button:focus {
   background-color: green;
 }
 
-fieldset {
-  min-width: 90%;
-}
-
 /* Media screens for desktop */
 @media (min-width: 1401px) {
   input [type="text"],
@@ -48,6 +44,7 @@ fieldset {
     padding: 2em;
     height: 20em;
     margin: auto;
+    min-width: 90%;
   }
 
   button {
@@ -92,7 +89,6 @@ fieldset {
    }
 
   fieldset {
-    min-width: 5%;
     font-size: 1.2em;
   }
 
@@ -104,7 +100,7 @@ fieldset {
     margin: auto;
   }
 
-  #message-box {
+  .message-container #textarea {
     width: 20em;
     height: 4em;
     resize: none;
@@ -139,7 +135,6 @@ fieldset {
     padding: 2em;
     height: 20em;
     margin: auto;
-    width: 80%;
   }
 
   button {
